samples/_failures_safe/1761726922_e5544e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_82f04331.c: In function ‘main’:
./samples/SAFE/__tmp_82f04331.c:143:12: error: missing terminating " character
  143 |     printf("Enter 'END' on a separate line to finish.\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_82f04331.c:143:5: error: expected expression at end of input
  143 |     printf("Enter 'END' on a separate line to finish.\n
      |     ^~~~~~
./samples/SAFE/__tmp_82f04331.c:143:5: error: expected declaration or statement at end of input
